@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="2.4.0" name="ALPHA Player" provider-name="Twilight0">
+<addon id="plugin.video.alphatv.gr" version="2.4.1" name="ALPHA Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.addon" version="16.1.000"/>
 		<import addon="script.module.tulip" version="2.8.17" />
@@ -20,7 +20,10 @@
 		<source>https://github.com/Twilight0/plugin.video.alphatv.gr</source>
 		<website>http://www.alphatv.gr/</website>
         <size>598620</size>
-		<news>[B]2.4.0[/B]
+		<news>[B]2.4.1[/B]
+- Fixed issues related to web site changes
+
+[B]2.4.0[/B]
 - Revert of cache change back to traditional get
 - Bug fixes accross the board
 - Utilize youtube addon for resolving some videos
